force-app/main/default/objects/Piple_Line_Report_Data__c/Piple_Line_Report_Data__c.object-meta.xml
<CustomObject>
    <description>Data object for Piple Line Report Data</description>
    <label>Piple Line Report Data</label>
    <nameField>
        <label>Deal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Piple Line Reports Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>