force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Amortization_Term__c.field-meta.xml
<CustomField>
    <fullName>Amortization_Term__c</fullName>
    <label>Amortization_Term</label>
    <length>60</length>
    <type>Text</type>
</CustomField>