force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Anticipated_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Closing_Date__c</fullName>
    <description>Anticipated_Closing_Date__c</description>
    <label>Anticipated_Closing_Date</label>
    <type>Date</type>
</CustomField>