force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Anticipated_IC_Approval__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_IC_Approval__c</fullName>
    <label>Anticipated_IC_Approval</label>
    <type>Date</type>
</CustomField>