force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Are_Assets_Being_RFNC_From_Existing_Term__c.field-meta.xml
<CustomField>
    <fullName>Are_Assets_Being_RFNC_From_Existing_Term__c</fullName>
    <label>Are_Assets_Being_RFNC_From_Existing_Term</label>
    <length>3</length>
    <type>Text</type>
</CustomField>