force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Are_Assets_Coming_Off_Bridge_Line__c.field-meta.xml
<CustomField>
    <fullName>Are_Assets_Coming_Off_Bridge_Line__c</fullName>
    <label>Are_Assets_Coming_Off_Bridge_Line</label>
    <length>3</length>
    <type>Text</type>
</CustomField>