force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Awaiting_Kickoff_Call__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Kickoff_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Awaiting_Kickoff_Call</label>
    <type>Checkbox</type>
</CustomField>