force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Cash_Management__c.field-meta.xml
<CustomField>
    <fullName>Cash_Management__c</fullName>
    <label>Cash_Management</label>
    <length>50</length>
    <type>Text</type>
</CustomField>