force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Closer__c.field-meta.xml
<CustomField>
    <fullName>Closer__c</fullName>
    <label>Closer__r.Initials__c</label>
    <length>18</length>
    <type>Text</type>
</CustomField>