force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Current_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Loan_Amount__c</fullName>
    <label>Current_Loan_Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>