force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Days_In_Underwriting__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Underwriting__c</fullName>
    <label>Days_In_Underwriting</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>