force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <description>Deal</description>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Piple Line Reports Data</relationshipLabel>
    <relationshipName>Piple_Line_Reports_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>