force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Deal_Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Deal_Loan_Number__c</fullName>
    <label>Deal_Loan_Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>