force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Final_Spread__c.field-meta.xml
<CustomField>
    <fullName>Final_Spread__c</fullName>
    <label>Final_Spread</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>