force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <label>Floor</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>