force-app/main/default/objects/Piple_Line_Report_Data__c/fields/In_Process_of_Withdrawn_or_Rejected__c.field-meta.xml
<CustomField>
    <fullName>In_Process_of_Withdrawn_or_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In_Process_of_Withdrawn_or_Rejected</label>
    <type>Checkbox</type>
</CustomField>