force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Introductions_Source__c.field-meta.xml
<CustomField>
    <fullName>Introductions_Source__c</fullName>
    <label>Account.Introductions_Source__c</label>
    <length>50</length>
    <type>Text</type>
</CustomField>