force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Kickoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Kickoff_Date__c</fullName>
    <label>Kickoff_Date</label>
    <type>Date</type>
</CustomField>