force-app/main/default/objects/Piple_Line_Report_Data__c/fields/LegalCounsel__c.field-meta.xml
<CustomField>
    <fullName>LegalCounsel__c</fullName>
    <description>LegalCounsel</description>
    <label>LegalCounsel</label>
    <length>40</length>
    <type>Text</type>
</CustomField>