force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Loan_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Loan_Coordinator__c</fullName>
    <label>Loan_Coordinator__r.Initials__c</label>
    <length>18</length>
    <type>Text</type>
</CustomField>