force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose__c</fullName>
    <label>Loan_Purpose</label>
    <length>50</length>
    <type>Text</type>
</CustomField>