force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Loan_Size__c.field-meta.xml
<CustomField>
    <fullName>Loan_Size__c</fullName>
    <label>Loan_Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>