force-app/main/default/objects/Piple_Line_Report_Data__c/fields/LTV__c.field-meta.xml
<CustomField>
    <fullName>LTV__c</fullName>
    <label>LTV</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>