force-app/main/default/objects/Piple_Line_Report_Data__c/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <label>Owner.LastName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>