force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Rate_Lock_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Rate_Lock_Picklist__c</fullName>
    <label>Rate Lock Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>