force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Recourse__c.field-meta.xml
<CustomField>
    <fullName>Recourse__c</fullName>
    <label>Recourse</label>
    <length>50</length>
    <type>Text</type>
</CustomField>