force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Spread_BPS__c.field-meta.xml
<CustomField>
    <fullName>Spread_BPS__c</fullName>
    <label>Spread_BPS</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>