force-app/main/default/objects/Piple_Line_Report_Data__c/fields/State_Percentages__c.field-meta.xml
<CustomField>
    <fullName>State_Percentages__c</fullName>
    <label>State_Percentages</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>