force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Term_Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Term_Loan_Type__c</fullName>
    <label>Term_Loan_Type</label>
    <length>6</length>
    <type>Text</type>
</CustomField>