force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Third_Party_Title__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Title__c</fullName>
    <description>Third Party Title</description>
    <label>Third Party Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>