force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Third_Party_Title_Name__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Title_Name__c</fullName>
    <label>Third_Party_Title__r.Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>