force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title__r.Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>