force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Title_and_Escrow__c.field-meta.xml
<CustomField>
    <fullName>Title_and_Escrow__c</fullName>
    <description>Title and Escrow</description>
    <label>Title and Escrow</label>
    <length>50</length>
    <type>Text</type>
</CustomField>