force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Underwriter__c.field-meta.xml
<CustomField>
    <fullName>Underwriter__c</fullName>
    <label>Underwriter__r.Initials__c</label>
    <length>18</length>
    <type>Text</type>
</CustomField>