force-app/main/default/objects/Piple_Line_Report_Data__c/fields/Warehouse_Line__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Line__c</fullName>
    <label>Warehouse_Line</label>
    <length>50</length>
    <type>Text</type>
</CustomField>